# pycascades-cms

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  app.json  docker-compose.yml  justfile  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  test_netlify_build.yml
_netlify_dev/: index.html
home/: models.py
home/migrations/: 0003_auto_20210110_0738.py  0004_cornerbanner.py  0005_simplepage.py  0006_simplepage_custom_template_name.py  0007_homepage_custom_template_name.py  0008_homepage_background.py  0009_homepage_background_attribution.py  0010_mastodonverification.py  0011_venuepage.py  0012_remove_venuepage_accommodation_attribution_and_more.py
home/templates/home/: home_page.html  mastodon.html  simple_page.html  venue_page.html  welcome_page.html
home/templates/pages/: conduct.html  covid.html  simple_page.html  the_conference.html
home/templates/tags/: corner_banner.html  mastodon.html  navigation.html
home/templatetags/: corner_banner_tags.py  menu_tags.py  social_tags.py
news/: models.py
news/migrations/: 0001_initial.py  0002_newslist.py
news/templates/news/: news_item.html  news_list.html  news_post.html
program/: models.py
program/migrations/: 0001_initial.py  0002_pretalxschedule.py  0003_auto_20210118_0112.py  0004_add_mastodon_to_speakers_organizers.py  0005_add_other_socials_speaker.py
program/templates/program/: pretalx_schedule.html  talk.html  talk_list.html
program/templatetags/: sponsor_tags.py
pycascades/: assets.py  context_processors.py  urls.py  views.py  wsgi.py
pycascades/deployment/: models.py  redirects.py  urls.py  views.py  wagtail_hooks.py
pycascades/deployment/migrations/: 0001_initial.py  0002_netlifyconfiguration.py  0003_deployment_configuration.py  0004_netlifyconfiguration_api_token.py  0005_auto_20210110_2150.py  0006_auto_20210110_2158.py  0007_deployment_message.py  0008_deployment_builder.py  0009_deployment_logs.py  0010_auto_20210114_0737.py  0011_auto_20210114_0741.py  0012_add_active_field_for_netlify_fields.py
pycascades/jobs/: models.py
pycascades/jobs/migrations/: 0001_initial.py  0002_job.py  0003_job_sponsor.py  0004_auto_20210117_0351.py  0005_auto_20210117_0356.py
pycascades/jobs/templates/jobs/: job.html  (+1 more)
pycascades/settings/: base.py  dev.py  production.py
pycascades/templates/: 404.html  base.html
pycascades/templates/includes/: nav.html  sponsor_logos.html  subscribe.html
sponsors/: models.py
sponsors/migrations/: 0001_initial.py  0002_auto_20210110_0838.py  0003_auto_20210110_1012.py  0004_auto_20210114_0411.py  0005_sponsortier_priority.py
sponsors/templates/sponsors/: sponsor_logos.html  sponsor_logos_smol.html  sponsor_tier.html  sponsors.html  welcome_page.html
sponsors/templatetags/: sponsor_tags.py
static/: staticfiles.json
static/wagtailadmin/css/: core.ad6e5e5ed5d1.css
team/: models.py
team/migrations/: 0001_initial.py  0002_organizer_section.py  0003_add_mastodon_to_speakers_organizers.py
team/templates/team/: organizer_partial.html  team_page.html
team/templatetags/: team_tags.py
(+14 files in other folders)
