[tool.poetry]
name = "pycascades-cms"
version = "0.1.0"
description = ""
authors = ["Seb Vetter <seb@pycascades.com>"]
license = "MIT"

[tool.poetry.dependencies]
# The Python version here is specific because this
# is how Heroku determines the Python version
# usually defined in the runtime.txt.
# NOTE: THIS MUST BE PINNED! If you change it here, also change it in
# the GitHub actions and the Dockerfile.
python = "3.10.4"
django = "^4.1.2"  # pinning this for now
wagtail = "^4.0.2"
wagtail-bakery = "^0.5.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
pyjade = "^4.0.0"
django-assets = "^2.0"
django-storages = "^1.11.1"
sentry-sdk = "^1.9.10"
cssmin = "^0.2.0"
jsmin = "^3.0.0"
pynetlify = "^0.1.1"


[tool.poetry.dev-dependencies]
black = "^22.10"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
