[tool.poetry]
name = "pycascades-cms"
version = "0.1.0"
description = ""
authors = ["Seb Vetter <seb@pycascades.com>"]
license = "MIT"

[tool.poetry.dependencies]
# The Python version here is specific because this
# is how Heroku determines the Python version
# usually defined in the runtime.txt.
# NOTE: THIS MUST BE PINNED! If you change it here, also change it in
# the GitHub actions, the Dockerfile, and the Heroku config
python = "^3.10.4"
# we don't really care too much about the boto3 version
# but boto3's version constraints make dependency resolution
# take tens of minutes. Update the boto3 pin to the latest version
# whenever you update anything else
boto3 = "1.34.39"
django = "5.0.2"
wagtail = "6.0.1"
wagtail-bakery = "0.8.0"
gunicorn = "21.2.0"
django-heroku = "0.3.1"
pyjade = "4.0.0"
django-assets = "2.0"
django-storages = "^1.13.2"
cssmin = "^0.2.0"
jsmin = "^3.0.0"
pynetlify = "^0.1.1"
wagtail-modeladmin = "2.0.0"


[tool.poetry.dev-dependencies]
black = "^24.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
